--- a/hitroupe-frontend/src/index.html
+++ b/hitroupe-frontend/src/index.html
@@ -16,6 +16,7 @@
   <!-- Optional theme -->
   <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap-theme.min.css">
 
+  <script src="assets/js/jquery-1.10.2.js"></script>
   <!-- Latest compiled and minified JavaScript -->
   <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js"></script>
 
